# ErisPulse-QQBotAdapter

./: .gitignore  CoverToOnebot12.md  README.md  platform-features.md  pyproject.toml
QQBotAdapter/: Converter.py  Core.py  WebSocket.py  __init__.py
