[project]
name = "ErisPulse-QQBotAdapter"
version = "1.0.0"
description = "ErisPulse的QQ官方机器人适配模块"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [ { name = "wsu2059", email = "wsu2059@qq.com" } ]
dependencies = [
    "aiohttp>=3.8.0"
]

[project.urls]
"homepage" = "https://github.com/ErisPulse/ErisPulse-QQBotAdapter"

[project.entry-points."erispulse.adapter"]
qqbot = "QQBotAdapter:QQBotAdapter"
qq = "QQBotAdapter:QQBotAdapter"

[tool.setuptools.packages.find]
include = [ "QQBotAdapter" ]
